# serializer version: 1
# name: test_ct_relationship_new_external
  '''
  <Relationship xmlns="http://schemas.openxmlformats.org/package/2006/relationships" Id="rId9" Type="ReLtYpE" Target="http://some/link" TargetMode="External"/>
  
  '''
# ---
# name: test_ct_relationship_new_internal
  '''
  <Relationship xmlns="http://schemas.openxmlformats.org/package/2006/relationships" Id="rId9" Type="ReLtYpE" Target="foo/bar.xml"/>
  
  '''
# ---
# name: test_ct_relationships_add_rel
  '''
  <Relationships xmlns="http://schemas.openxmlformats.org/package/2006/relationships">
    <Relationship Id="rId1" Type="http://reltype1" Target="docProps/core.xml"/>
    <Relationship Id="rId2" Type="http://linktype" Target="http://some/link" TargetMode="External"/>
    <Relationship Id="rId3" Type="http://reltype2" Target="../slides/slide1.xml"/>
  </Relationships>
  
  '''
# ---
# name: test_ct_relationships_new
  '''
  <Relationships xmlns="http://schemas.openxmlformats.org/package/2006/relationships"/>
  
  '''
# ---
# name: test_ct_relationships_xml_file_bytes
  '''
  <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
  <Relationships xmlns="http://schemas.openxmlformats.org/package/2006/relationships"/>
  '''
# ---
# name: test_ct_types_add_default_override
  '''
  <Types xmlns="http://schemas.openxmlformats.org/package/2006/content-types">
    <Default Extension="xml" ContentType="application/xml"/>
    <Default Extension="jpeg" ContentType="image/jpeg"/>
    <Override PartName="/docProps/core.xml" ContentType="app/vnd.type1"/>
    <Override PartName="/ppt/presentation.xml" ContentType="app/vnd.type2"/>
    <Override PartName="/docProps/thumbnail.jpeg" ContentType="image/jpeg"/>
  </Types>
  
  '''
# ---
# name: test_ct_types_new
  '''
  <Types xmlns="http://schemas.openxmlformats.org/package/2006/content-types"/>
  
  '''
# ---
# name: test_serialize_part_xml
  '''
  <?xml version='1.0' encoding='UTF-8' standalone='yes'?>
  <f:foo xmlns:f="http://foo"><f:bar>foobar</f:bar></f:foo>
  '''
# ---
